simplify replace generation header in simulation_job, update simulation show structure, update application to set italian as default locale, add bare minimum for controller translations

--- a/config/locales/activerecord/it.yml
+++ b/config/locales/activerecord/it.yml
@@ -8,7 +8,24 @@ it:
       cell:
         one: Cellula
         other: Cellule
+      simulation:
+        one: Simulazione
+        other: Simulazioni
+      generation:
+        one: Generazione
+        other: Generazioni
     attributes:
+      simulation:
+        latest_generation: Ultima generazione
+        previous_generation: Penultima generazione
+        generations: Generazioni
+      generation:
+        number: Numero
+        world: Mondo
+        cells: Cellule
+      world:
+        width: Larghezza
+        height: Altezza
       cell:
         x: X
         y: Y
